examples/test/testpolicy13322.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13322
  namespace: namespace231
spec:
  podSelector:
    matchLabels:
      key9: value24
      key12: value2
      key13: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key11: value33
          key2: value28
      podSelector:
        matchLabels:
          key45: value45
          key37: value44
